# TCC-2007

./: .gitignore  CMakeLists.txt  executar_teste.bat  q_learning.py  rodar.bat  verificar_ambiente.py
src/: Instancia.hpp  Parser.hpp  bindings.cpp
src/dados/: Parser.cpp
src/solucao/: GradeHoraria.cpp  GradeHoraria.hpp
